--- a/env.example
+++ b/env.example
@@ -34,12 +34,15 @@ SPACES_ACCESS_KEY=your_test_access_key_here
 SPACES_SECRET_KEY=your_test_secret_key_here
 SPACES_REGION=sfo3
 
-# Stripe Configuration (use test keys only)
-STRIPE_SECRET_KEY=sk_test_your_test_key_here
-STRIPE_PUBLISHABLE_KEY=pk_test_your_test_key_here
-STRIPE_PRICE_ID=price_your_test_price_id_here
-STRIPE_PROD_ID=prod_your_test_product_id_here
-STRIPE_WEBHOOK_SECRET=whsec_your_test_webhook_secret_here
+# Stripe Configuration (Optional - leave empty for free launch)
+# STRIPE_SECRET_KEY=sk_test_your_test_key_here
+# STRIPE_PUBLISHABLE_KEY=pk_test_your_test_key_here
+# STRIPE_PRICE_ID=price_your_test_price_id_here
+# STRIPE_PROD_ID=prod_your_test_product_id_here
+# STRIPE_WEBHOOK_SECRET=whsec_your_test_webhook_secret_here
+
+# Free Launch Mode
+FREE_BOARDS_ENABLED=true
 
 # Brevo Email Service (use test API key)
 BREVO_API_KEY=xkeysib_your_test_api_key_here
