--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ jinja2==3.1.2
 aiofiles==23.2.1
 pydantic[email]==2.5.0
 pydantic-settings==2.1.0
+authlib==1.2.1
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
